--- a/peas/templates/layout.html
+++ b/peas/templates/layout.html
@@ -1,17 +1,29 @@
 <!doctype html>
 <title>Flaskr</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<div class=page>
-  <h1>Flaskr</h1>
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
+<script src="{{ url_for('static', filename='angular.js') }}"></script>
+<script src="{{ url_for('static', filename='peas.js') }}"></script>
+
+<body ng-app="peas">
+  <div ng-controller="peasCtrl">
+    <p>Calculator</p>
+    <p>title: <input type="text" ng-model="title"></p>
+    <p>Content: <textarea rows=10 cols=80 ng-model="content"></textarea></p>
+    <p><button ng-click="addNote()">Add Note</button></p>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>content</th>
+        <tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="note in notes">
+          <td>{[note["title"]]}</td>
+          <td>{[note["content"]]}</td>
+          <td><button ng-click="deleteNote(note['id'])">X</button></p>
+        </tr>
+    </table>
+    <p><span ng-bind="response"></span></p>
   </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
-</div>
+</body>
