1. Add init service to control the order of all controllers' initializations. 2. Return the promise in data service.

--- a/peas/templates/layout.html
+++ b/peas/templates/layout.html
@@ -3,6 +3,7 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 <script src="{{ url_for('static', filename='angularjs/angular.js') }}"></script>
 <script src="{{ url_for('static', filename='angularjs/angular-route.js') }}"></script>
+<script src="{{ url_for('static', filename='underscorejs/underscore.js') }}"></script>
 {% assets "main_js" %}
   <script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
